--- a/PageSwitcher/MainWindow.xaml
+++ b/PageSwitcher/MainWindow.xaml
@@ -5,7 +5,7 @@
         Title="MainWindow" Height="419.162" Width="647.605">
     <Window.Resources>
     </Window.Resources>
-    <DockPanel Background="{StaticResource MainBackground}" LastChildFill="True">
+    <DockPanel Name="dockPanel" Background="{StaticResource MainBackground}" LastChildFill="False">
         <Border Background="{StaticResource StatusBackground}"
                 DockPanel.Dock="Top"
                 BorderThickness="0"
@@ -54,8 +54,14 @@
                 <Label></Label>
             </DockPanel>
         </Border>
-        <Border Name="pageHolder"  CornerRadius="20" Background="{StaticResource MainBackground}" Margin="5">
-
+        <Border Name="pageHolder"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                Width="{Binding Path=ActualWidth, ElementName=dockPanel}"
+                CornerRadius="20" Background="{StaticResource MainBackground}"
+                Padding="5"
+                >
+            <Rectangle Fill="Aquamarine" Height="20"/>
         </Border>
     </DockPanel>
 </Window>
