--- a/PageSwitcher/Pages/ServiceMainPage.xaml
+++ b/PageSwitcher/Pages/ServiceMainPage.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:PageSwitcher"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Border CornerRadius="20">
+    <Border CornerRadius="20"
+            Padding="10">
         <Border.Style>
             <Style x:Name="xx" TargetType="{x:Type Border}">
                 <Style.Triggers>
@@ -19,7 +20,7 @@
                 </Style.Triggers>
             </Style>
         </Border.Style>
-        <Grid>
+        <Grid local:AttachedProperties.Role="Service">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition Height="5*"></RowDefinition>
